[gd_scene load_steps=7 format=3 uid="uid://cogq2ulbjbe5p"]

[ext_resource type="Script" path="res://ui/settings.gd" id="1_k8m8x"]
[ext_resource type="Theme" uid="uid://btinitn5u8gd1" path="res://ui/ui_theme.tres" id="2_k636x"]
[ext_resource type="Script" path="res://global_settings.gd" id="3_lbt6n"]
[ext_resource type="Script" path="res://ui/graphics.gd" id="4_huqg1"]
[ext_resource type="Script" path="res://ui/audio_settings.gd" id="4_morpw"]
[ext_resource type="Script" path="res://ui/controls_settings.gd" id="4_yij2a"]

[node name="settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1_k8m8x" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.019
anchor_top = 0.5
anchor_right = 0.019
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
theme_override_constants/separation = 25
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="graphics" type="Button" parent="VBoxContainer"]
offset_right = 159.0
offset_bottom = 34.0
theme = ExtResource( "2_k636x" )
text = "Graphics"
flat = true
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls" type="Button" parent="VBoxContainer"]
offset_top = 59.0
offset_right = 159.0
offset_bottom = 93.0
theme = ExtResource( "2_k636x" )
text = "Controls"
flat = true
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio" type="Button" parent="VBoxContainer"]
offset_top = 118.0
offset_right = 159.0
offset_bottom = 152.0
theme = ExtResource( "2_k636x" )
text = "Audio"
flat = true
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="VBoxContainer"]
offset_top = 177.0
offset_right = 159.0
offset_bottom = 211.0
theme = ExtResource( "2_k636x" )
text = "Back"
flat = true
script = ExtResource( "3_lbt6n" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="graphics" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.019
anchor_top = 0.5
anchor_right = 0.019
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
theme_override_constants/separation = 25
script = ExtResource( "4_huqg1" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="graphics"]
offset_top = 108.0
offset_right = 80.0
offset_bottom = 137.0
theme = ExtResource( "2_k636x" )
text = "Back
"
flat = true
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.019
anchor_top = 0.5
anchor_right = 0.019
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
theme_override_constants/separation = 25
script = ExtResource( "4_yij2a" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="invery_y" type="CheckBox" parent="controls"]
offset_right = 80.0
offset_bottom = 29.0
theme = ExtResource( "2_k636x" )
text = "Invert Y axis"
flat = true
script = null

[node name="mouse_sens_label" type="Label" parent="controls"]
offset_right = 106.0
offset_bottom = 29.0
theme = ExtResource( "2_k636x" )
text = "Mouse Sensitvity"
structured_text_bidi_override_options = []
script = null

[node name="mouse_sens" type="HScrollBar" parent="controls"]
offset_top = 54.0
offset_right = 80.0
offset_bottom = 83.0
theme = ExtResource( "2_k636x" )
min_value = 1.0
value = 1.0
script = null

[node name="back" type="Button" parent="controls"]
offset_top = 108.0
offset_right = 80.0
offset_bottom = 137.0
theme = ExtResource( "2_k636x" )
text = "Back
"
flat = true
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.019
anchor_top = 0.5
anchor_right = 0.019
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
theme_override_constants/separation = 25
script = ExtResource( "4_morpw" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_label" type="Label" parent="audio"]
offset_right = 80.0
offset_bottom = 29.0
theme = ExtResource( "2_k636x" )
text = "Music volume"
structured_text_bidi_override_options = []
script = null

[node name="music_vol" type="HSlider" parent="audio"]
offset_right = 80.0
offset_bottom = 29.0
theme = ExtResource( "2_k636x" )
min_value = -50.0
max_value = 30.0
script = null

[node name="sfx_label" type="Label" parent="audio"]
offset_right = 80.0
offset_bottom = 29.0
theme = ExtResource( "2_k636x" )
text = "Sound FX volume"
structured_text_bidi_override_options = []
script = null

[node name="sfx_vol" type="HSlider" parent="audio"]
offset_top = 54.0
offset_right = 80.0
offset_bottom = 83.0
theme = ExtResource( "2_k636x" )
min_value = -50.0
max_value = 30.0
script = null

[node name="back" type="Button" parent="audio"]
offset_top = 108.0
offset_right = 80.0
offset_bottom = 137.0
theme = ExtResource( "2_k636x" )
text = "Back
"
flat = true
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/graphics" to="." method="_on_graphics_pressed"]
[connection signal="pressed" from="VBoxContainer/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="graphics/back" to="." method="pre_show"]
[connection signal="toggled" from="controls/invery_y" to="controls" method="_on_invery_y_toggled"]
[connection signal="value_changed" from="controls/mouse_sens" to="controls" method="_on_mouse_sens_value_changed"]
[connection signal="pressed" from="controls/back" to="." method="pre_show"]
[connection signal="value_changed" from="audio/music_vol" to="audio" method="_on_music_vol_value_changed"]
[connection signal="value_changed" from="audio/sfx_vol" to="audio" method="_on_sfx_vol_value_changed"]
[connection signal="pressed" from="audio/back" to="." method="pre_show"]
